JG-2003-10-15-0: Enhancem.: Berkeleydb Spooling:
                            - added transaction handling
                            - qmaster: shutdown and restart spooling framework
                              while daemonizing

AH-2003-10-15-0: Cleanup:   Removed null-statement code in shepherd about 
                            truncating of job stdout/stderr. There is no 
                            case when we truncate.

AH-2003-10-14-0: Bugfix:    - matching for -l a=<arch> was broken

AD-2003-10-14-0: Bugfix:    Fixed the build
                 Changed:   sge_lock.c

AA-2003-10-13-0: Bugfix:    - cluster config params went to bootstrap file, removed
                              from dialogue
                            - hostgroup folder added to host dialogue
                            - openssl 0.9.7c
                            - sge_ca fixes from V53

JG-2003-10-13-0: Enhancem.: Bootstrapping: Updated man pages.
                 Bugfix:    If directories SGE_ROOT, SGE_ROOT/SGE_CELL and
                            SGE_ROOT/SGE_CELL/common were missing, no error
                            message was output by SGE components.

AD-2003-10-13-0: Enhancem.: Added target 'lcklib'. 
                 Changed:   ./libs/Makefile

SG-2003-10-13-1: Enhancem.: Updated thre resource_attributes.txt document.

SG-2003-10-13-0: Bugfix:    Fixed the build

EB-2003-10-11-0: Enhancem.: Started with STAT_SUM CQ-WP
                            - Moved code which changes QI states into new module
                            - Added dynamic QI attributes
                            - Changed spooling code for QI

JG-2003-10-10-0: Enhancem.: Moved product mode to bootstrap file.
                 Bugfix:    Fixed the build (new solarisx86 compiler is more
                            critical).

AD-2003-10-10-0: Bugfix:    Fixed the build
                 Changed:   msg_sgeobjlib.h

AD-2003-10-09-1: Bugfix:    Fixed the build
                 Changed:   sge_hgroup_qmaster.c